Updated configuration for Sonar
- separated code coverage (-Pcode-coverage) computation from integration-test (-Pit) execution
- created a dedicated profile to compute code coverage per unit test (-Pcoverage-per-test) in Sonar
- instrumented Sonar configuration to use JaCoCo and code coverage profile to not fail on test